fix spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -52,6 +52,7 @@ body {
 }
 h1 {
   font-size: 30px;
+  padding: 10px;
 }
 h5 {
   font-size: 18px;
@@ -66,6 +67,8 @@ h5 {
   letter-spacing: .5px;
   text-transform: uppercase;
   text-align: right;
+  padding: 25px;
+  word-spacing: 15px;
 }
 .nav a {
   color: #fff;
@@ -75,4 +78,7 @@ h5 {
   font-family: Georgia, Times, "Times New Roman", serif;
   font-style: italic;
   margin-bottom: 18px;
+}
+.date a{
+  color: #5DA1BE;
 }
